[package]
name = "pear"
authors = ["yuma140902"]
version = "0.1.0"
edition = "2018"
description = "s4 Pear の Rust による実装。OSD-004 の CLI Type A 1.0 に準拠している。"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
